# wasm-kubernetes

./: Dockerfile.embed  Dockerfile.native  Dockerfile.runtime  README.adoc  build.sh  embed.yaml  native.yaml  regular.yaml  runtime.yaml  vcluster.yaml
.github/workflows/: build.yaml
native/: Cargo.toml
src/: main.rs  model.rs
wasm/: Cargo.toml
