[package]
name = "httpbin-native"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["rt", "macros", "net", "time", "io-util"] }
axum = "0.8"
serde = { version = "1.0.217", features = ["derive"] }
url = "2.5.4"

[[bin]]
name = "httpbin"
path = "../src/main.rs"
