[package]
name = "httpbin-wasm"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }

[dependencies]
tokio = { version = "1.36", features = ["rt", "macros", "net", "time", "io-util"] }
axum = "0.8"
serde = { version = "1.0.217", features = ["derive"] }

[[bin]]
name = "httpbin"
path = "../src/main.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(flavor, values("native", "embed", "runtime"))'] }
